--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,7 +19,7 @@ h2 {
 	font-size: 13px !important;
 }
 .scrollable {
-	overflow-x: scroll !important;
+	overflow-x: scroll;
 }
 a {
 	color: inherit;
